# essm_jax

./: README.md  pyproject.toml  requirements-examples.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: unittests.yml
docs/examples/: excitable_damped_harmonic_oscillator.ipynb  online_filtering.ipynb  ou_process.ipynb
essm_jax/: essm.py  jvp_op.py  pytee_utils.py  sparse.py
essm_jax/tests/: test_essm.py  test_jvp_op.py  test_sparse.py
src/essm_jax/: dual_essm.py  essm.py  pytee_utils.py
src/essm_jax/tests/: test_essm.py  test_jvp_op.py  test_pytree_utils.py
