# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "essm_jax"
version = "1.0.2"
description = "Extended State Space Modelling in JAX"
readme = "README.md"
requires-python = ">3.9"
license = { text = "Apache Software License" }
authors = [{ name = "Joshua G. Albert", email = "albert@strw.leidenuniv.nl" }]
keywords = ["kalman", "non-linear", "EKF", "modelling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/joshuaalbert/essm_jax" }

[project.optional-dependencies]
# Define the extras here; they will be loaded dynamically from setup.py
examples = []  # Placeholders; extras will load from setup.py

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]
